--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Muhammad Bin Jamil</title>
-	<link rel="stylesheet" type="text/css" href="bulma.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/bulma.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 <body>
@@ -22,7 +22,7 @@
 				</div>
 				<div class="column is-narrow">
 					<figure class="image is-128x128">
-						<img class="is-rounded" src="binjamil.jpg">
+						<img class="is-rounded" src="img/binjamil.jpg">
 					</figure>
 				</div>
 				<div class="column">
