--- a/index.html
+++ b/index.html
@@ -1,154 +1,186 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Muhammad Bin Jamil</title>
-	<link rel="stylesheet" type="text/css" href="css/bulma.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-</head>
-<body>
-	<header class="section">
-		<div class="container">
-			<div class="columns is-vcentered">
-				<div class="column">
-					<h1 class="title">Muhammad Bin Jamil</h1>
-					<h3 class="subtitle has-text-link" style="margin-bottom: 1rem">Entrepreneur, Computer Scientist</h3>
-					<p>
-						A budding entrepreneur and computer scientist aiming to do great things in Silicon Valley. 
-						The broader vision is to help the community by building social enterprises in Pakistan.
-					</p>
-				</div>
-				<div class="column is-narrow">
-					<figure class="image is-128x128">
-						<img class="is-rounded" src="img/binjamil.jpg">
-					</figure>
-				</div>
-				<div class="column">
-					<div class="columns is-mobile has-text-link">
-						<div class="column contactinfo">
-							<div class="has-text-right has-text-weight-semibold">
-								<p>binjamil35@gmail.com</p>
-								<p>314-670-3369</p>
-								<p>Islamabad, Pakistan</p>
-								<p>@mbinjamil</p>
-							</div>
-						</div>
-						<div class="column is-narrow has-text-centered">
-							<p><i class="fas fa-envelope"></i></p>
-							<p><i class="fas fa-mobile-alt"></i></p>
-							<p><i class="fas fa-map-marker-alt"></i></p>
-							<p><i class="fab fa-instagram"></i></p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</header>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Muhammad Bin Jamil</title>
+    <link rel="stylesheet" type="text/css" href="css/bulma.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
+    ></script>
+  </head>
+  <body>
+    <header class="section">
+      <div class="container">
+        <div class="columns is-vcentered">
+          <div class="column">
+            <h1 class="title">Muhammad Bin Jamil</h1>
+            <h3 class="subtitle has-text-link" style="margin-bottom: 1rem">
+              Entrepreneur, Computer Scientist
+            </h3>
+            <p>
+              A budding entrepreneur and computer scientist aiming to do great
+              things in Silicon Valley. The broader vision is to help the
+              community by building social enterprises in Pakistan.
+            </p>
+          </div>
+          <div class="column is-narrow">
+            <figure class="image is-128x128">
+              <img class="is-rounded" src="img/binjamil.jpg" />
+            </figure>
+          </div>
+          <div class="column">
+            <div class="columns is-mobile has-text-link">
+              <div class="column contactinfo">
+                <div class="has-text-right has-text-weight-semibold">
+                  <p>binjamil35@gmail.com</p>
+                  <p>314-670-3369</p>
+                  <p>Islamabad, Pakistan</p>
+                  <p>@mbinjamil</p>
+                </div>
+              </div>
+              <div class="column is-narrow has-text-centered">
+                <p><i class="fas fa-envelope"></i></p>
+                <p><i class="fas fa-mobile-alt"></i></p>
+                <p><i class="fas fa-map-marker-alt"></i></p>
+                <p><i class="fab fa-instagram"></i></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
 
-	<hr class="is-marginless">
+    <hr class="is-marginless" />
 
-	<section class="section" style="padding: 1.5rem;">
-		<div class="container">
-			<div class="columns">
-				<div class="column">
-					<div>
-						<h2 class="title is-4">Work Experience</h2>
-						<div class="indent-section">
-							<div>
-								<p class="is-size-5 has-text-link has-text-weight-semibold">Founder</p>
-								<p>Founded a ride-sharing platform called <strong>Companion</strong>.</p>
-							</div>
-							<div>
-								<p class="is-size-5 has-text-link has-text-weight-semibold">App Developer</p>
-								<p>Built some basic applications like <i>Photo Gallery</i>, <i>Music Player</i>, etc.</p>
-								<p>Have started doing freelance work on <strong>Upwork</strong> and <strong>Fiverr</strong>.</p>
-							</div>
-							<div>
-								<p class="is-size-5 has-text-link has-text-weight-semibold">Content Writer</p>
-								<p>Editor in Chief of high school's yearly magazine.</p>
-								<p>Articles on education and personal development on <strong>Medium</strong>.</p>
-							</div>
-						</div>
-					</div>
-					<div>
-						<h2 class="title is-4">Education</h2>
-						<div class="indent-section">
-							<div>
-								<p class="is-size-5 has-text-link has-text-weight-semibold">Bachelor of Science in Computer Science</p>
-								<p>National University of Science and Technology, Islamabad</p>
-							</div>
-							<div>
-								<p class="is-size-5 has-text-link has-text-weight-semibold">Master of Business Administration</p>
-								<p>Harvard Business School, Boston</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="column">
-					<div class="skills-section">
-						<h2 class="title is-4">Skills and Competencies</h2>
-						<p>
-							<button class="button is-link">Marketing</button>
-							<button class="button is-link">Creativity</button>
-							<button class="button is-link">Financial Management</button>
-							<button class="button is-link">Leadership</button>
-							<button class="button is-link">Business Plan Writing</button>
-							<button class="button is-link">Problem Solving</button>
-							<button class="button is-link">Mobile App Development</button>
-							<button class="button is-link">Web Development</button>
-							<button class="button is-link">UI/UX Designing</button>
-							<button class="button is-link">Goal Oriented</button>
-							<button class="button is-link">Critical Thinking</button>
-							<button class="button is-link">Persistence</button>
-							<button class="button is-link">Resilience</button>
-						</p>
-					</div>
-					<div>
-						<h2 class="title is-4">Interests</h2>
-						<div class="columns interests-section is-size-5 has-text-link has-text-weight-semibold">
-							<div class="column">
-								<div class="columns is-mobile">
-									<div class="column is-narrow has-text-centered has-text-info">
-										<p><i class="fas fa-code"></i></p>
-										<p><i class="fas fa-utensils"></i></p>
-										<p><i class="fas fa-briefcase"></i></p>
-										<p><i class="fas fa-book"></i></p>
-										<p><i class="fas fa-chess-knight"></i></p>
-									</div>
-									<div class="column labels">
-										<p>Programming</p>
-										<p>Food</p>
-										<p>Business</p>
-										<p>Reading</p>
-										<p>Chess</p>
-									</div>
-								</div>
-							</div>
-							<div class="column">
-								<div class="columns is-mobile">
-									<div class="column is-narrow has-text-centered has-text-info">
-										<p><i class="fas fa-music"></i></p>
-										<p><i class="fas fa-futbol"></i></p>
-										<p><i class="fas fa-dumbbell"></i></p>
-										<p><i class="fas fa-baseball-ball"></i></p>
-										<p><i class="fas fa-gamepad"></i></p>
-									</div>
-									<div class="column labels">
-										<p>Music</p>
-										<p>Football</p>
-										<p>Workout</p>
-										<p>Tennis</p>
-										<p>Video Games</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-</body>
+    <section class="section" style="padding: 1.5rem;">
+      <div class="container">
+        <div class="columns">
+          <div class="column">
+            <div>
+              <h2 class="title is-4">Work Experience</h2>
+              <div class="indent-section">
+                <div>
+                  <p class="is-size-5 has-text-link has-text-weight-semibold">
+                    Founder
+                  </p>
+                  <p>
+                    Actively working to build a stock photos website called
+                    <strong>Coconut</strong>.
+                  </p>
+                  <p>
+                    Validating business models for a ride-sharing platform
+                    called <strong>Companion</strong>.
+                  </p>
+                </div>
+                <div>
+                  <p class="is-size-5 has-text-link has-text-weight-semibold">
+                    Web and Mobile Developer
+                  </p>
+                  <p>
+                    Built some basic projects like <i>Movie Database</i>,
+                    <i>Music Player</i>, etc.
+                  </p>
+                  <p>
+                    Have started doing freelance work on
+                    <strong>Upwork</strong> and <strong>Fiverr</strong>.
+                  </p>
+                </div>
+                <div>
+                  <p class="is-size-5 has-text-link has-text-weight-semibold">
+                    Content Writer
+                  </p>
+                  <p>Editor in Chief of high school's yearly magazine.</p>
+                  <p>
+                    Articles on education and personal development on
+                    <strong>Medium</strong>.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div>
+              <h2 class="title is-4">Education</h2>
+              <div class="indent-section">
+                <div>
+                  <p class="is-size-5 has-text-link has-text-weight-semibold">
+                    Bachelor of Science in Computer Science
+                  </p>
+                  <p>
+                    National University of Science and Technology, Islamabad
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="column">
+            <div class="skills-section">
+              <h2 class="title is-4">Skills and Competencies</h2>
+              <p>
+                <button class="button is-link">Marketing</button>
+                <button class="button is-link">Creativity</button>
+                <button class="button is-link">Financial Management</button>
+                <button class="button is-link">Leadership</button>
+                <button class="button is-link">Business Plan Writing</button>
+                <button class="button is-link">Problem Solving</button>
+                <button class="button is-link">Mobile App Development</button>
+                <button class="button is-link">Web Development</button>
+                <button class="button is-link">Goal Oriented</button>
+                <button class="button is-link">Critical Thinking</button>
+                <button class="button is-link">Persistence</button>
+              </p>
+            </div>
+            <div>
+              <h2 class="title is-4">Interests</h2>
+              <div
+                class="columns interests-section is-size-5 has-text-link has-text-weight-semibold"
+              >
+                <div class="column">
+                  <div class="columns is-mobile">
+                    <div
+                      class="column is-narrow has-text-centered has-text-info"
+                    >
+                      <p><i class="fas fa-code"></i></p>
+                      <p><i class="fas fa-utensils"></i></p>
+                      <p><i class="fas fa-briefcase"></i></p>
+                      <p><i class="fas fa-book"></i></p>
+                      <p><i class="fas fa-chess-knight"></i></p>
+                    </div>
+                    <div class="column labels">
+                      <p>Programming</p>
+                      <p>Food</p>
+                      <p>Business</p>
+                      <p>Reading</p>
+                      <p>Chess</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="column">
+                  <div class="columns is-mobile">
+                    <div
+                      class="column is-narrow has-text-centered has-text-info"
+                    >
+                      <p><i class="fas fa-music"></i></p>
+                      <p><i class="fas fa-futbol"></i></p>
+                      <p><i class="fas fa-dumbbell"></i></p>
+                      <p><i class="fas fa-baseball-ball"></i></p>
+                      <p><i class="fas fa-gamepad"></i></p>
+                    </div>
+                    <div class="column labels">
+                      <p>Music</p>
+                      <p>Football</p>
+                      <p>Workout</p>
+                      <p>Tennis</p>
+                      <p>Video Games</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
